Removed extra scroll bar, fixed overflow

--- a/sdece/css/modal.css
+++ b/sdece/css/modal.css
@@ -152,20 +152,18 @@ button {
 /* Partner modal */
 .modal {
 	display: none;
+	width: 25%;
+	height: 100%;
 	border-radius: 0.5rem;
 	position: absolute;
 	z-index: 2000;
 	top: 100px;
 	left: 26rem;
-	width: auto; /* Adjust the width of the modal as needed */
-	min-width: 30%;
-	max-width: 35%;
-	height: auto; /* Adjust the height of the modal as needed */
 	justify-content: center;
 	box-sizing: border-box;
 	border-radius: 0.5rem;
-	overflow-y: scroll;
-	overflow-x: hidden;
+	/* overflow-y: scroll;
+	overflow-x: hidden; */
 	box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 
 	animation: slide-out 500ms forwards;
@@ -225,8 +223,8 @@ button {
 
 .modal-content {
 	position: relative;
+	height: 50%;
 	padding: 32px 32px;
-	width: 100%;
 	background-color: #fcfcfc;
 	font-family: Hind;
 	font-size: 16px;
@@ -234,7 +232,6 @@ button {
 	line-height: 32px;
 	margin: 0;
 	overflow-y: scroll;
-	height: auto;
 }
 
 .modal-button {
